commented out footer for the time being

--- a/EEU/UNDERConstruction/under_construction.html
+++ b/EEU/UNDERConstruction/under_construction.html
@@ -35,7 +35,7 @@
       <p class="generalMessage">We're looking forward to meeting you in the New Year.</p>
     </div>
 
-    <div class="footer">
+    <!-- <div class="footer">
       <div class="footer-map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3466.0885539312226!2d-95.53010548496604!3d29.68821218201335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640c28fab6983f1%3A0x8ba275fe463f027c!2zODMxMyBTb3V0aHdlc3QgRnd5ICMzNTBiLCBIb3VzdG9uLCBUWCA3NzA3NCDjgqLjg6Hjg6rjgqvlkIjooYblm70!5e0!3m2!1sja!2sjp!4v1670337532915!5m2!1sja!2sjp"
@@ -58,8 +58,8 @@
           <ul>Friday 9:30am - 4:00pm</ul>
           <ul>Saturday 9:00am - 2:00pm by appointment only</ul>
         </ul>
-      </div>
-    </div>
+      </div> -->
+  </div>
 </body>
 
 </html>
